@@ -91,21 +91,19 @@ abstract class EntityFindBase implements EntityFind {
 
     @Override
     EntityFind condition(String fieldName, EntityCondition.ComparisonOperator operator, Object value) {
-        condition(efi.conditionFactory.makeCondition(fieldName, operator, value))
-        return this
+        if (operator == EntityCondition.EQUALS) return condition(fieldName, value)
+        return condition(efi.conditionFactory.makeCondition(fieldName, operator, value))
     }
     @Override
     EntityFind condition(String fieldName, String operator, Object value) {
         EntityCondition.ComparisonOperator opObj = EntityConditionFactoryImpl.stringComparisonOperatorMap.get(operator)
         if (opObj == null) throw new IllegalArgumentException("Operator [${operator}] is not a valid field comparison operator")
-        condition(efi.conditionFactory.makeCondition(fieldName, opObj, value))
-        return this
+        return condition(efi.conditionFactory.makeCondition(fieldName, opObj, value))
     }
 
     @Override
     EntityFind conditionToField(String fieldName, EntityCondition.ComparisonOperator operator, String toFieldName) {
-        condition(efi.conditionFactory.makeCondition(fieldName, operator, toFieldName))
-        return this
+        return condition(efi.conditionFactory.makeConditionToField(fieldName, operator, toFieldName))
     }
 
     @Override
@@ -121,7 +119,7 @@ abstract class EntityFindBase implements EntityFind {
         if (condition == null) return this
         if (whereEntityCondition) {
             // use ListCondition instead of ANDing two at a time to avoid a bunch of nested ANDs
-            if (whereEntityCondition instanceof ListCondition) {
+            if (whereEntityCondition instanceof ListCondition && whereEntityCondition.getOperator() == EntityCondition.AND) {
                 ((ListCondition) whereEntityCondition).addCondition((EntityConditionImplBase) condition)
             } else {
                 whereEntityCondition =
